--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -5,7 +5,7 @@
 
 .search input {
   background-color: white;
-  border: 0;
+  border: 2px solid black;
   border-radius: 2px;
   border-top-right-radius: 0px;
   border-bottom-right-radius: 0px;
